--- a/public/facebook-credentials.html
+++ b/public/facebook-credentials.html
@@ -77,9 +77,9 @@ limitations under the License.
           // Initialize Firebase
           var config = {
             apiKey: "AIzaSyCKKfyfOxM2rlgrPoPSlGbs1_i9Td2IsA4",
-            authDomain: "kengraf-auth.firebaseapp.com",
-            databaseURL: "https://kengraf-auth.firebaseio.com",
-            storageBucket: "kengraf-auth.appspot.com",
+            authDomain: "kengraf-auth2.firebaseapp.com",
+            databaseURL: "https://kengraf-auth2.firebaseio.com",
+            storageBucket: "kengraf-auth2.appspot.com",
           };
           firebase.initializeApp(config);
         </script>
