--- a/public/google-credentials.html
+++ b/public/google-credentials.html
@@ -54,7 +54,7 @@ limitations under the License.
        *********************************************************************************************************************** -->
         <script type="module">
           // Import the functions you need from the SDKs you need
-          import { initializeApp } from "https://www.gstatic.com/firebasejs/10.6.0/firebase-app.js";
+          import { initializeApp } from "firebase/app"; // "https://www.gstatic.com/firebasejs/10.6.0/firebase-app.js";
           // TODO: Add SDKs for Firebase products that you want to use
           // https://firebase.google.com/docs/web/setup#available-libraries
         
