--- a/public/github-redirect.html
+++ b/public/github-redirect.html
@@ -28,19 +28,24 @@ limitations under the License.
   <link rel="stylesheet" href="main.css">
 
   <!-- Firebase -->
-  <!-- ***********************************************************************************************************************
-       * TODO(DEVELOPER): Paste the initialization snippet from: Firebase Console > Overview > Add Firebase to your web app. *
-       *********************************************************************************************************************** -->
-        <script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
-        <script>
-          // Initialize Firebase
-          var config = {
+        <script type="module">
+          // Import the functions you need from the SDKs you need
+          import { initializeApp } from "firebase/app"; // "https://www.gstatic.com/firebasejs/10.6.0/firebase-app.js";
+          // TODO: Add SDKs for Firebase products that you want to use
+          // https://firebase.google.com/docs/web/setup#available-libraries
+        
+          // Your web app's Firebase configuration
+          const firebaseConfig = {
             apiKey: "AIzaSyA0h8PIvh41O8OOoujMuTSHG-fSMZl_4-c",
             authDomain: "kengraf-auth2.firebaseapp.com",
-            databaseURL: "https://kengraf-auth2.firebaseio.com",
+            projectId: "kengraf-auth2",
             storageBucket: "kengraf-auth2.appspot.com",
+            messagingSenderId: "905844058377",
+            appId: "1:905844058377:web:bdabdb45fc95f72bc04bd8"
           };
-          firebase.initializeApp(config);
+        
+          // Initialize Firebase
+          const app = initializeApp(firebaseConfig);
         </script>
 
   <script type="text/javascript">
