--- a/public/google-redirect.html
+++ b/public/google-redirect.html
@@ -29,7 +29,7 @@ limitations under the License.
 
   <!-- Firebase -->
   <script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
-  <script src="firebase.js"></scirpt>
+  <script src="firebase.js"></script>
 
   <script type="text/javascript">
 
