--- a/public/facebook-credentials.html
+++ b/public/facebook-credentials.html
@@ -69,20 +69,9 @@ limitations under the License.
 
 
   <!-- Firebase -->
-  <!-- ***********************************************************************************************************************
-       * TODO(DEVELOPER): Paste the initialization snippet from: Firebase Console > Overview > Add Firebase to your web app. *
-       *********************************************************************************************************************** -->
-        <script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
-        <script>
-          // Initialize Firebase
-          var config = {
-            apiKey: "AIzaSyCKKfyfOxM2rlgrPoPSlGbs1_i9Td2IsA4",
-            authDomain: "kengraf-auth2.firebaseapp.com",
-            databaseURL: "https://kengraf-auth2.firebaseio.com",
-            storageBucket: "kengraf-auth2.appspot.com",
-          };
-          firebase.initializeApp(config);
-        </script>
+  <script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
+  <script src="firebase.js"></script>
+  
   <script type="text/javascript">
     /**
      * Function called when there is a change in Facebook auth state.
