--- a/public/github-popup.html
+++ b/public/github-popup.html
@@ -28,20 +28,8 @@ limitations under the License.
   <link rel="stylesheet" href="main.css">
 
   <!-- Firebase -->
-  <!-- ***********************************************************************************************************************
-       * TODO(DEVELOPER): Paste the initialization snippet from: Firebase Console > Overview > Add Firebase to your web app. *
-       *********************************************************************************************************************** -->
-        <script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
-        <script>
-          // Initialize Firebase
-          var config = {
-            apiKey: "AIzaSyA0h8PIvh41O8OOoujMuTSHG-fSMZl_4-c",
-            authDomain: "kengraf-auth2.firebaseapp.com",
-            databaseURL: "https://kengraf-auth2.firebaseio.com",
-            storageBucket: "kengraf-auth2.appspot.com",
-          };
-          firebase.initializeApp(config);
-        </script>
+  <script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
+  <script src="firebase.js"></script>
 
   <script type="text/javascript">
 
