--- a/public/google-credentials.html
+++ b/public/google-credentials.html
@@ -49,9 +49,12 @@ limitations under the License.
   <script src="https://apis.google.com/js/platform.js" async defer></script>
 
   <!-- Firebase -->
+  <script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
+  <script src="firebase.js"></script>
+  
   <!-- ***********************************************************************************************************************
        * TODO(DEVELOPER): Paste the initialization snippet from: Firebase Console > Overview > Add Firebase to your web app. *
-       *********************************************************************************************************************** -->
+       ***********************************************************************************************************************
         <script type="module">
           // Import the functions you need from the SDKs you need
           import { initializeApp } from "firebase/app"; // "https://www.gstatic.com/firebasejs/10.6.0/firebase-app.js";
@@ -71,6 +74,7 @@ limitations under the License.
           // Initialize Firebase
           const app = initializeApp(firebaseConfig);
         </script>
+  -->
   <script type="text/javascript">
 
     // [START googlecallback]
