--- a/public/facebook-redirect.html
+++ b/public/facebook-redirect.html
@@ -44,7 +44,7 @@ limitations under the License.
         var provider = new firebase.auth.FacebookAuthProvider();
         // [END createprovider]
         // [START addscopes]
-        provider.addScope('user_likes');
+//KMG        provider.addScope('user_likes');
         // [END addscopes]
         // [START signin]
         firebase.auth().signInWithRedirect(provider);
