--- a/public/index.html
+++ b/public/index.html
@@ -61,10 +61,10 @@ limitations under the License.
             <li><a href="customauth.html">Custom Authentication</a><br><br></li>
 
             <li><a href="google-popup.html">Google Sign In using Popup</a></li>
-            <li><a href="google-redirect.html">Google Sign In using Redirect</a><br></li>
+            <li><a href="google-redirect.html">Google Sign In using Redirect</a><br><br></li>
 
             <li><a href="facebook-popup.html">Facebook Login In using Popup</a></li>
-            <li><a href="facebook-redirect.html">Facebook Login In using Redirect</a><br></li>
+            <li><a href="facebook-redirect.html">Facebook Login In using Redirect</a><br><br></li>
 
             <li><a href="twitter-popup.html">Twitter Sign In using Popup</a></li>
             <li><a href="twitter-redirect.html">Twitter Sign In using Redirect</a><br><br></li>
